[package]
name = "mockrs"
version = "1.1.0"
edition = "2021"
authors = ["skyfire <skyfireitdiy@hotmail.com>"]
description = "A crate that provides a X8664Mocker to mock function calls and intercept on x86_64 architecture."
license = "MIT"
repository = "https://github.com/skyfireitdiy/mockrs"
readme = "README.md"
keywords = ["mock", "mockrs"]
categories = ["development-tools::testing"]

[dependencies]
lazy_static="1.5.*"
nix={version="0.29.*", features=["mman", "signal"]}
iced-x86 = "1.21.*"
